feat: Notes module crud